# iiFBA

./: README.md
.github/: copilot-instructions.md
Examples/: 4bact_comm_edges.csv  4bact_comm_nodes.csv  compare_fba.csv  gifba_comparisons.ipynb  gifba_utilization.ipynb  iifba_comparisons.ipynb  iifba_usage.ipynb  iifba_utilization.ipynb  simple_iiFBA_usage.ipynb
Examples/AGORA2_Models/: Bacteroides_uniformis_ATCC_8492.mat  Clostridium_difficile_R20291.mat  (+3 more)
Original/: Iterative_Interaction_FBA_Shared.ipynb  iiFBA_functions.ipynb  iiFBA_subfunctions.ipynb
package/: pyproject.toml  setup..py
package/AGORA2_Models/: Bacteroides_thetaiotaomicron_3731.mat
package/examples/: iifba_usage.ipynb
package/gifba/: __init__.py  gifba_object.py  summary.py  utils.py
package/gifba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
package/gifba/AGORA2_Models/: Escherichia_coli_str_K_12_substr_MG1655.mat
package/gifba/Simple_Models/: sim1b.json  sim2d_1.json  sim2d_2.json  sim2e_1.json  sim2e_2.json  sim3b_1.json  sim4a_1.json  sim4a_2.json
package/iiFBA_extensions/: __init__.py  analysis.py  config.py  utils.py
package/iifba/: __init__.py  analysis.py  community.py  config.py  iifba_object.py  summary.py  utils.py
package/iifba.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/iifba/SImple_Models/: sit_II.json  sit_III_2.json  sit_IV_1.json
package/iifba/Simple_Models/: iifba_utilization.ipynb  sim2c_1.json  sim2c_2.json  sim_III_2.json  sim_VI_2.json  sim_V_2.json  sit_IV_2.json  sit_VI_2.json  sit_V_1.json  sit_V_2.json
(+28 files in other folders)
