[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "iifba"
version = "0.1.0"
description = "A set of tools and helpers for running iterative interaction flux balance analysis with COBRApy models"
authors = [
    { name="M-3-Lab", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "cobra>=0.27.0",
    "numpy>=1.21",
    "pandas>=1.3"
]

[project.urls]
Homepage = "https://m-3-lab.github.io"

[tool.setuptools]
package-data = { "iifba" = ["AGORA2_Models/*.mat", "Simple_Models/*.json"] }

[tool.setuptools.packages.find]
include = ["iifba*"]